--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>ログイン画面</title>
-        <!-- Sign in with Appleの設定 -->
-        <meta name="appleid-signin-client-id" content="your.client.id">
-        <meta name="appleid-signin-scope" content="email">
-        <meta name="appleid-signin-redirect-uri" content="https://your_module-dot-your_project_id.appspot.com/redirect_to">
-        <meta name="appleid-signin-state" content="forCSRF">
-    </head>
-    <body>
-        <h1>Apple IDでログインできます。</h1>
-        <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in"></div>
-        <!-- Sign in with Apple のJSライブラリを読み込み -->
-        <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>ログイン画面</title>
+    <!-- Settings for Sign in with Apple -->
+    <meta name="appleid-signin-client-id" content="your.client.id">
+    <meta name="appleid-signin-scope" content="email">
+    <meta name="appleid-signin-redirect-uri"
+          content="https://your_module-dot-your_project_id.appspot.com/redirect_to">
+    <meta name="appleid-signin-state" content="forCSRF">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="/bootstrap.min.css">
+    <script src="jquery.min.js"></script>
+    <script src="bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container">
+    <h1 class="mt-3">Apple IDでログインできます。</h1>
+    <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in" class="mt-3"></div>
+    <!-- Sign in with Apple のJSライブラリを読み込み -->
+    <script type="text/javascript"
+            src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
+</div>
+</body>
 </html>
