--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>ログイン画面</title>
+    <title>Login page</title>
     <!-- Settings for Sign in with Apple -->
     <meta name="appleid-signin-client-id" content="your.client.id">
     <meta name="appleid-signin-scope" content="email">
@@ -16,9 +16,9 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="mt-3">Apple IDでログインできます。</h1>
+    <h1 class="mt-3">You can login with Apple ID</h1>
     <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in" class="mt-3"></div>
-    <!-- Sign in with Apple のJSライブラリを読み込み -->
+    <!-- Load JS library for Sign in with Apple  -->
     <script type="text/javascript"
             src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
 </div>
