--- a/src/main/resources/templates/redirect_to.html
+++ b/src/main/resources/templates/redirect_to.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>リダイレクト先</title>
+    <title>/redirect_to</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/bootstrap.min.css">
     <script src="jquery.min.js"></script>
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="mt-3">リダイレクト先です。</h1>
-    <h2>ポストされた内容</h2>
+    <h1 class="mt-3">/redirect_to</h1>
+    <h2>Posted data</h2>
 
     <#if id_token?has_content>
     <p class="mt-3">
@@ -28,13 +28,13 @@
         ${error}
     </p>
     <#if id_token?has_content>
-    <h2>id_tokenの内容</h2>
+    <h2>id_token's contents</h2>
     <p class="mt-3">
-        <strong>検証結果</strong><br>
+        <strong>Verify</strong><br>
         ${verify}
     </p>
     <p>
-        <strong>ユーザID</strong><br>
+        <strong>User ID</strong><br>
         ${userId}
     </p>
     <p>
