--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,18 +9,34 @@
     <meta name="appleid-signin-redirect-uri"
           content="https://your_module-dot-your_project_id.appspot.com/redirect_to">
     <meta name="appleid-signin-state" content="forCSRF">
+    <!-- For mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/bootstrap.min.css">
     <script src="jquery.min.js"></script>
     <script src="bootstrap.min.js"></script>
 </head>
+<style>
+    h1 {
+        font-size: 20px;
+    }
+    .signin-button {
+        width: 280px;
+        height: 96px;
+        margin-top: 16px;
+        margin-bottom: 16px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
 <body>
 <div class="container">
     <h1 class="mt-3">You can login with Apple ID</h1>
-    <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in" class="mt-3"></div>
-    <!-- Load JS library for Sign in with Apple  -->
+    <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in" class="signin-button" />
+    <!-- Load JS library for Sign in with Apple -->
+    <!-- Caption is japanese -->
     <script type="text/javascript"
-            src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
+            src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/ja_JP/appleid.auth.js"></script>
 </div>
 </body>
 </html>
